k8s/local-docs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-docs
  namespace: graph-olap-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-docs
  template:
    metadata:
      labels:
        app: local-docs
    spec:
      containers:
        - name: local-docs
          image: local-docs:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: local-docs
  namespace: graph-olap-local
spec:
  type: NodePort
  selector:
    app: local-docs
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30082
